--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "library",
     "description": "Creates a communication platform where servers and browsers talk in language of caching",
     "keywords": ["http","caching"],
-    "homepage": "http://www.lucinda-framework.com/http-caching-api",
+    "homepage": "http://www.lucinda-framework.com/http-caching",
     "license": "MIT",
     "authors": [
         {
