--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
     "keywords": ["http","caching"],
     "homepage": "http://www.lucinda-framework.com/http-caching",
     "license": "MIT",
+    "autoload": {
+    	"psr-4": {
+        	"Lucinda\\Caching\\": "src/"
+    	}
+    },
     "authors": [
         {
             "name": "Lucian Popescu",
